--- a/CodeRun_tests/CodeRun_tests.vcxproj
+++ b/CodeRun_tests/CodeRun_tests.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="1. Средний элемент.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
