--- a/CodeRun_tests/CodeRun_tests.vcxproj
+++ b/CodeRun_tests/CodeRun_tests.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="1. Средний элемент.h" />
+    <ClInclude Include="2. Самый дешевый путь.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
