--- a/CodeRun_tests/CodeRun_tests.vcxproj.filters
+++ b/CodeRun_tests/CodeRun_tests.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="1. Средний элемент.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="2. Самый дешевый путь.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
