--- a/CodeRun_tests/CodeRun_tests.vcxproj
+++ b/CodeRun_tests/CodeRun_tests.vcxproj
@@ -132,6 +132,11 @@
   <ItemGroup>
     <ClInclude Include="1. Средний элемент.h" />
     <ClInclude Include="2. Самый дешевый путь.h" />
+    <ClInclude Include="3. Вывести маршрут максимальной стоимости.h" />
+    <ClInclude Include="4. Ход конём.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="5. Кафе.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
